# starthack

./: .gitignore  01_Mars_Environment_Extended.md  02_Controlled_Environment_Agriculture_Principles.md  05_Human_Nutritional_Strategy.md  06_Greenhouse_Operational_Scenarios.md  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.fargate.yml  docker-compose.yml
agent/: .bedrock_agentcore.yaml  .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
agent/src/: __main__.py  config.py  crisis_tracker.py  energy_projection.py  journal.py  main.py  mcp_client.py  memory.py  prompts.py  runner.py  sim_client.py  weather_integration.py  ws_client.py
agent/src/agents/: CLAUDE.md  __init__.py  climate_emergency.py  energy_crisis.py  nutrition_planner.py  orchestrator.py  pathogen_response.py  storm_preparation.py  triage.py  water_crisis.py
agent/src/tools/: CLAUDE.md  __init__.py  _state.py  actions.py  memory_tool.py  telemetry.py
agent/tests/: __init__.py  test_actions.py  test_crisis_tracker.py  test_integration.py  test_memory.py  test_memory_tool.py  test_orchestrator_memory.py  test_sim_client.py  test_weather_integration.py  test_ws_client.py
backend/: main.py  pyproject.toml
docs/: ARCHITECTURE.md  CHALLENGE.MD  CLAUDE.md  DEPLOYMENT.md
fast-sim/: Dockerfile  cdk.json  pyproject.toml
fast-sim/.claude/omo/: .read_tracker.json
fast-sim/infra/: __init__.py  app.py  stack.py
fast-sim/src/: __init__.py  aggregate.py  athena_setup.sql  cli.py  config.py  dispatch.py  distill.py  engine_bridge.py  handlers.py  policy.py  results.py  runner.py  sweep.py
fast-sim/tests/: __init__.py  test_bridge.py  test_config.py  test_distill.py  test_handlers.py  test_policy.py  test_runner.py
frontend/: .oxfmtrc.json  .prettierignore  CLAUDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
infra/: .gitignore  app.py  cdk.context.json  cdk.json  (+1 more)
ml/: CLAUDE.md  Dockerfile  lambda_handler.py  mars_weather_data.csv  pyproject.toml  requirements.txt  serve.py
ml/mars_weather/: CLAUDE.md  __init__.py  data.py  evaluate.py  export_onnx.py  model.py  predict.py  train.py
ml/models/: feature_scaler.pkl  lstm_h1.onnx  lstm_h1.onnx.data  lstm_h1.pt  lstm_h1_meta.json  lstm_h30.onnx  lstm_h30.onnx.data  lstm_h30.pt  lstm_h30_meta.json  lstm_h7.onnx  lstm_h7.onnx.data  lstm_h7.pt  lstm_h7_meta.json  seasonal_baseline.pkl  target_scaler.pkl
simulation/: .dockerignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml
simulation/scripts/: export_openapi.py
simulation/src/: CLAUDE.md  __init__.py  agent_bridge.py  app.py  catalog.py  connection.py  constants.py  engine.py  enums.py  interrupts.py  results.py  session.py  snapshots.py  state.py  tick_loop.py  ws.py
simulation/src/models/: CLAUDE.md  __init__.py  autonomous_events.py  climate.py  crew.py  crops.py  energy.py  events.py  nutrients.py  responses.py  scoring.py  water.py  weather.py
simulation/src/routers/: __init__.py  actions.py  admin.py  telemetry.py
simulation/tests/: test_bootstrap_and_ws.py
(+102 files in other folders)
