[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agentcore>=0.1.6",
    "strands-agents>=1.30.0",
    "strands-agents-tools>=0.2.22",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
