[project]
name = "mars-weather-ml"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
