[project]
name = "mars-weather-ml"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "onnxruntime>=1.22.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mangum>=0.19.0",
    "awslambdaric>=3.0.0",
]

[dependency-groups]
dev = [
    "onnxscript>=0.6.2",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
    "torch>=2.10.0",
]

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
