[project]
name = "mars-simulation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.8",
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "uvicorn>=0.42.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
